--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
@@ -2,13 +2,65 @@
     <div class="popupHeader">
         <div class="headerBezeichnung">
             <p>Projekt erfassen</p>
-            <span (click)="closeModal()" class="close">&times;</span>
+        </div>
+        <div class="closeTab">
+            <span (click)="closeModal()" class="close"><p>&times;</p></span>
         </div>
     </div>
     <div class="popupContent">
-
+        <div class="split firstSplit">
+            <p>
+                KU 40-001<br /> Thomas Brändle<br /> Herr Thomas Brändle<br /> 9608 Ganterschwil
+            </p>
+            <div class="btnBearbeiten">
+                <p (click)="openKundendaten()">Kundendaten bearbeiten</p>
+            </div>
+            <p>Thomas Brändle AG <br /> Friedaustrasse 3 <br /> 9608 Ganterschwil <br /> CH - Schweiz</p>
+            <div class="btnBearbeiten">
+                <p (click)="openRechnungsadresse()">Rechnungsadresse ändern</p>
+            </div>
+        </div>
+        <div class="split secondSplit">
+            <div class="notizen">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <p (click)="openNotizen()" class="btnBearbeiten">Notizen bearbeiten</p>
+        </div>
+        <div class="split thirdSplit">
+            <p>Zahlungsart:</p>
+            <div class="dropDown">
+                <select name="zahlungsart" id="zahlungsart">
+                    <option value="rechnung">Rechnung</option>
+                    <option value="vorauskasse">Vorauskasse</option>
+                    <option value="bar">Bar</option>
+                </select>
+            </div>
+            <p>Zahlungsbedingungen:</p>
+            <div class="dropDown">
+                <select name="zahlungsbedingungen" id="zahlungsbedingungen">
+                    <option value="10 Tage">10 Tage 3% Skonto, 30 Tage Netto</option>
+                    <option value="7 Tage">7 Tage 2% Skonto, 20 Tage Netto</option>
+                    <option value="30 Tage Netto">30 Tage Netto</option>
+                    <option value="14 Tage Netto">14 Tage Netto</option>
+                    <option value="vorauskasse">Vorauskasse</option>
+                    <option value="barzahlung">Barzahlung</option>
+                    <option value="teilzahlung">Teilzahlung</option>
+                </select>
+            </div>
+            <div class="belegart">
+                <form action="">
+                    <label for="radioAngebot">Angebot</label>
+                    <input type="radio" id="radioAngebot" name="belegArt" value="angebot">
+                    <label for="radioAuftrag">Auftrag</label>
+                    <input type="radio" id="radioAuftrag" name="belegArt" value="auftrag">
+                </form>
+            </div>
+        </div>
     </div>
     <div class="popupFooter">
-
+        <div class="btnBearbeiten btnSpeichern">
+            <p>Projekt erfassen</p>
+        </div>
     </div>
 </div>
