--- a/src/app/_popupKomponente/kundendaten/kundendaten.component.html
+++ b/src/app/_popupKomponente/kundendaten/kundendaten.component.html
@@ -1,1 +1,25 @@
-<p>kundendaten works!</p>
+<div class="generateProject">
+    <div class="popupHeader">
+        <div class="headerBezeichnung">
+            <p>Kundendaten</p>
+        </div>
+        <div class="closeTab">
+            <span (click)="closeModal()" class="close"><p>&times;</p></span>
+        </div>
+    </div>
+    <div class="popupContent">
+        <div class="split firstSplit">
+        </div>
+        <div class="split secondSplit">
+
+        </div>
+        <div class="split thirdSplit">
+
+        </div>
+    </div>
+    <div class="popupFooter">
+        <div class="btnBearbeiten">
+            <p>Änderungen speichern</p>
+        </div>
+    </div>
+</div>
