--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
@@ -4,30 +4,23 @@
             <p>Projekt erfassen</p>
         </div>
         <div class="closeTab">
-            <span (click)="closeModal()" class="close"><p>&times;</p></span>
+            <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
         </div>
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
-            <p>
+            <p class="contentReadonly">
                 KU 40-001<br /> Thomas Brändle<br /> Herr Thomas Brändle<br /> 9608 Ganterschwil
             </p>
             <div class="btnBearbeiten">
                 <p (click)="openKundendaten()">Kundendaten bearbeiten</p>
             </div>
-            <p>Thomas Brändle AG <br /> Friedaustrasse 3 <br /> 9608 Ganterschwil <br /> CH - Schweiz</p>
+            <p class="contentReadonly">Thomas Brändle AG <br /> Friedaustrasse 3 <br /> 9608 Ganterschwil <br /> CH - Schweiz</p>
             <div class="btnBearbeiten">
                 <p (click)="openRechnungsadresse()">Rechnungsadresse ändern</p>
             </div>
         </div>
         <div class="split secondSplit">
-            <div class="notizen">
-                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </textarea>
-            </div>
-            <p (click)="openNotizen()" class="btnBearbeiten">Notizen bearbeiten</p>
-        </div>
-        <div class="split thirdSplit">
             <p>Zahlungsart:</p>
             <div class="dropDown">
                 <select name="zahlungsart" id="zahlungsart">
@@ -49,17 +42,27 @@
                 </select>
             </div>
             <div class="belegart">
-                <form action="">
+                <p>Belegart auswählen:</p>
+                <form action="" class="radioForm">
                     <label for="radioAngebot">Angebot</label>
-                    <input type="radio" id="radioAngebot" name="belegArt" value="angebot">
+                    <input type="radio" id="radioAngebot" name="belegArt" value="angebot" required>
                     <label for="radioAuftrag">Auftrag</label>
-                    <input type="radio" id="radioAuftrag" name="belegArt" value="auftrag">
+                    <input type="radio" id="radioAuftrag" name="belegArt" value="auftrag" required>
                 </form>
             </div>
         </div>
+        <div class="split thirdSplit">
+            <div class="notizen">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <div class="btnBearbeiten">
+                <p (click)="openNotizen()">Notizen bearbeiten</p>
+            </div>
+        </div>
     </div>
-    <div class="popupFooter">
-        <div class="btnBearbeiten btnSpeichern">
+    <div class=" popupFooter ">
+        <div class="btnBearbeiten btnSpeichern ">
             <p>Projekt erfassen</p>
         </div>
     </div>
