--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.sass
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.sass
@@ -1,2 +1,16 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.notizen textarea
+    height: calc( 510px - 200px )
+    margin-bottom: 10px
+
+.radioForm
+    width: 100%
+    margin-top: 5px
+
+.radioForm input
+    margin-right: 40px
+
+.radioForm label
+    margin-right: 10px
