--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -45,171 +45,190 @@
         <div class="windowTitle">
             <p>Flüssige Mittel</p>
         </div>
-        <div class="fmAktuell">
-            <div class="fmTitle">
-                <p>2022</p>
-            </div>
-            <div class="fmContent">
-                <div class="rowOne">
-                    <p>Ertrag</p>
-                    <p>Offene Rechnungen</p>
-                    <p>Aufwand</p>
-                </div>
-                <div class="rowTwo">
-                    <p>CHF 10'000.00.-</p>
-                    <p>CHF 1'000.00.-</p>
-                    <p>CHF 6'000.00.-</p>
-                </div>
-            </div>
-        </div>
-        <div class="fmOne">
-            <div class="fmTitle">
-                <p>2021</p>
-            </div>
-            <div class="fmContent">
-                <div class="rowOne">
-                    <p>Ertrag</p>
-                    <p>Offene Rechnungen</p>
-                    <p>Aufwand</p>
-                </div>
-                <div class="rowTwo">
-                    <p>CHF 10'000.00.-</p>
-                    <p>CHF 1'000.00.-</p>
-                    <p>CHF 6'000.00.-</p>
-                </div>
-            </div>
-        </div>
-        <div class="fmTwo">
-            <div class="fmTitle">
-                <p>2020</p>
-            </div>
-            <div class="fmContent">
-                <div class="rowOne">
-                    <p>Ertrag</p>
-                    <p>Offene Rechnungen</p>
-                    <p>Aufwand</p>
-                </div>
-                <div class="rowTwo">
-                    <p>CHF 10'000.00.-</p>
-                    <p>CHF 1'000.00.-</p>
-                    <p>CHF 6'000.00.-</p>
-                </div>
-            </div>
-        </div>
-        <div class="fmThree">
-            <div class="fmTitle">
-                <p>2019</p>
-            </div>
-            <div class="fmContent">
-                <div class="rowOne">
-                    <p>Ertrag</p>
-                    <p>Offene Rechnungen</p>
-                    <p>Aufwand</p>
-                </div>
-                <div class="rowTwo">
-                    <p>CHF 10'000.00.-</p>
-                    <p>CHF 1'000.00.-</p>
-                    <p>CHF 6'000.00.-</p>
-                </div>
-            </div>
+        <div class="windowTable fmTable">
+            <table>
+                <tbody>
+                    <tr class="fmTitle">
+                        <th colspan="2">2022</th>
+                    </tr>
+                    <tr class="fmContent">
+                        <td>
+                            <p>
+                                Ertrag<br /> Offene Rechnungen<br /> Aufwand
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                CHF 10'000.00.-<br /> CHF 1'000.00.-<br /> CHF 6'000.00.-
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="fmTitle">
+                        <th colspan="2">2021</th>
+                    </tr>
+                    <tr class="fmContent">
+                        <td>
+                            <p>
+                                Ertrag<br /> Offene Rechnungen<br /> Aufwand
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                CHF 10'000.00.-<br /> CHF 1'000.00.-<br /> CHF 6'000.00.-
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="fmTitle">
+                        <th colspan="2">2020</th>
+                    </tr>
+                    <tr class="fmContent">
+                        <td>
+                            <p>
+                                Ertrag<br /> Offene Rechnungen<br /> Aufwand
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                CHF 10'000.00.-<br /> CHF 1'000.00.-<br /> CHF 6'000.00.-
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="fmTitle">
+                        <th colspan="2">2019</th>
+                    </tr>
+                    <tr class="fmContent">
+                        <td>
+                            <p>
+                                Ertrag<br /> Offene Rechnungen<br /> Aufwand
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                CHF 10'000.00.-<br /> CHF 1'000.00.-<br /> CHF 6'000.00.-
+                            </p>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
         </div>
     </div>
     <div class="forUR window">
         <div class="windowTitle">
             <p>Letzte Vorgänge</p>
         </div>
-        <div class="windowTable">
+        <div class="windowTable vorgaengeTable">
             <table>
-                <tr>
-                    <th>Belegart</th>
-                    <th>Kunde</th>
-                    <th>Nummer</th>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
-                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Belegart</th>
+                        <th>Kunde</th>
+                        <th>Nummer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                        <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB f-001</a></td>
+                    </tr>
+
+                </tbody>
             </table>
         </div>
     </div>
