--- a/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
+++ b/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
@@ -1,1 +1,22 @@
-<p>generate-mitarbeiter works!</p>
+<div class="generateProject">
+    <div class="popupHeader">
+        <div class="headerBezeichnung">
+            <p>Projekt erfassen</p>
+        </div>
+        <div class="closeTab">
+            <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
+        </div>
+    </div>
+    <div class="popupContent">
+        <div class="split firstSplit">
+        </div>
+        <div class="split secondSplit">
+        </div>
+        <div class="split thirdSplit">
+        </div>
+        <div class="popupFooter">
+            <div class="btnBearbeiten btnSpeichern">
+                <p>Projekt erfassen</p>
+            </div>
+        </div>
+    </div>
