--- a/src/app/_popupKomponente/kundendaten/kundendaten.component.html
+++ b/src/app/_popupKomponente/kundendaten/kundendaten.component.html
@@ -1,24 +1,155 @@
-<div class="generateProject">
+<div class="popupWindow">
     <div class="popupHeader">
         <div class="headerBezeichnung">
             <p>Kundendaten</p>
+            <div class="searchBarSmallPopup">
+                <input type="text" id="searchBarSmallPopup" placeholder="SEARCH">
+                <a href="#"><img [src]="search" alt=""></a>
+            </div>
+
         </div>
         <div class="closeTab">
-            <span (click)="closeModal()" class="close"><p>&times;</p></span>
+            <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-
-        </div>
-        <div class="split thirdSplit">
-
+        <div class="windowTable popupTable">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Kundennummer</th>
+                        <th>Kunde</th>
+                        <th>Adresse</th>
+                        <th>Kategorie</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">KU 40-001</a></td>
+                        <td><a href="">Thomas Brändle</a></td>
+                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
+                        <td><a href="">Privatkunde</a></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <div class="popupFooter">
-        <div class="btnBearbeiten">
+        <div class="btnBearbeiten btnSpeichern">
             <p>Änderungen speichern</p>
         </div>
     </div>
