--- a/src/styles.sass
+++ b/src/styles.sass
@@ -49,6 +49,9 @@ h2, h3, h4, h5, p, a, label
     color: black
     text-decoration: none
 
+a
+    cursor: pointer
+
 .mat-body, 
 .mat-body-1, 
 .mat-typography 
@@ -58,12 +61,14 @@ h2, h3, h4, h5, p, a, label
 .mat-typography
     z-index: -11
 
-a
-    cursor: pointer
+.mat-dialog-container
+    padding: 15px !important
+    border-radius: 20px !important
+    overflow: hidden !important
 
 /* ## Scrollbar ## */
 ::-webkit-scrollbar 
-    width: 00px
+    width: 0px
 
 /* Aktive Menupunkte */
 .active 
